# moat

./: .env  .gitattributes  .gitignore  .rustfmt.toml  .swiftlint.yml  Cargo.toml  Dockerfile.aarch64  Package.swift  Podfile  README.md  Rocket.toml  addMuted.bash  make.bash  moat.service
Server/: Cargo.toml
Server/src/: config_parser.rs  db_parser.rs  main.rs  routes.rs
Swive/: Color+hex.swift  Config.swift  ContentView.swift  Entry.swift  Info.plist  ListingView.swift  SpriteScene.swift  SpriteSheet.swift  SwiveApp.swift
Swive.xcodeproj/: project.pbxproj
Swive.xcworkspace/: contents.xcworkspacedata
Swive/Models/: AlertState.swift  ObservableArray.swift  RssFeed.swift  RssItem.swift  ServerConnectionError.swift  ServerResponse.swift
Swive/Util/: ApiWrapper.swift  Creds.swift  Logos.swift  SpriteScene.swift  SpriteSheet.swift  (+2 more)
SwiveTests/: SwiveTests.swift
SwiveUITests/: SwiveUITests.swift
conf/: missing_equals.conf  moat  moat.service  server.conf
moat/: Config.swift  Info.plist  moatApp.swift
moat.xcodeproj/: project.pbxproj
moat.xcworkspace/: contents.xcworkspacedata
moatTests/: moatTests.swift
moatUITests/: moatUITests.swift
mock/: dir.json
mocks/: 1.json  dir.json  invalid_key.conf  missing_key.conf
scripts/: deploy-aarch64.sh  getAsset.bash  getMuted.bash  moat_util.sh  removeFeed.bash  setup_mock.sh  test_setup.sh
src/: config.rs  config_parser.rs  dataguards.rs  db.rs  db_parser.rs  err.rs  errors.rs  global.rs  lib.rs  macros.rs  main.rs  middleware.rs  models.rs  muted.rs  newsboat_actor.rs  routes.rs  urls_parser.rs  util.rs
(+59 files in other folders)
