[package]
name = "moat_server"
version = "0.1.0"
authors = ["Kafva <https://github.com/Kafva>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "tls"] }
clap = { version = "3.1.12", features = ["derive"] }
rusqlite = "0.25.3"
base64 = "0.13.0"
regex = "1.5.4"
serde = "1.0.126"       # Serialisation/deserialisation
