[package]
name = "moat_server"
version = "0.2.0"
authors = ["Kafva <https://github.com/Kafva>"]
edition = "2021"

[dependencies]
actix-web = { version = "4" }
clap =   { version = "3.1.12",     features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
rusqlite = { version = "0.28.0",   features = ["bundled"] }

