[package]
name = "moat_server"
version = "0.2.0"
authors = ["Kafva <https://github.com/Kafva>"]
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = { version = "4" }
clap =   { version = "3.1.12", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
sqlx = { version = "0.6.2", features = [ "runtime-actix-rustls", "sqlite" ] }
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
base64 = "0.21.0"
derive_more = "0.99.17"
